# code_agents

./: README.md  Talk.md  agent.py  agent_complex.py  main.py  pyproject.toml  tmp.json
smolagents/: agent.py  ama.py  fancy.py  what_to_do.py
strands-agents/: agent.py
